--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uvCharts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.2",
@@ -8,6 +8,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-compress": "~0.5.1"
+    "grunt-contrib-compress": "~0.5.1",
+    "grunt-lintspaces": "~0.7.0"
   }
 }
