--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "uvCharts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "devDependencies": {
+    "del": "^1.2.0",
+    "eclint": "^0.2.6",
+    "grunt": "~0.4.1",
+    "grunt-contrib-compress": "~0.5.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-compress": "~0.5.1",
-    "grunt-lintspaces": "~0.7.0"
+    "grunt-lintspaces": "~0.7.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.2.4",
+    "gulp-zip": "^3.0.2",
+    "jshint-stylish": "^2.0.1"
   }
 }
