--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uvCharts",
-  "version": "1.0.6",
+  "version": "1.1.0-rc",
   "devDependencies": {
     "del": "^1.2.0",
     "eclint": "^0.2.6",
@@ -12,6 +12,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-lintspaces": "~0.7.0",
+    "gulp": "^3.9.0",
     "gulp-bower": "0.0.10",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
