--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.2.4",
+    "gulp-webserver": "^0.9.1",
     "gulp-zip": "^3.0.2",
     "jshint-stylish": "^2.0.1"
   }
