--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uvCharts",
-  "version": "1.1.0-rc",
+  "version": "1.1.0",
   "devDependencies": {
     "del": "^1.2.0",
     "eclint": "^0.2.6",
